Fixes for running experiments. Most of multiclass
Also, proposal.

--- a/Proposal/document.bib
+++ b/Proposal/document.bib
@@ -40,7 +40,7 @@
 }
 
 @inproceedings{lindgren2000anytime,
-  title={Anytime inductive logic programming.},
+  title={Anytime inductive logic programming},
   author={Lindgren, Tony},
   booktitle={Computers and Their Applications},
   pages={439--442},
