Many new things

--- a/Proposal/document.bib
+++ b/Proposal/document.bib
@@ -450,3 +450,58 @@ pages = {331-339}
   year={2012},
   publisher={Springer}
 }
+
+@article{jarmasz2012roget,
+  title={Roget's thesaurus as a lexical resource for natural language processing},
+  author={Jarmasz, Mario},
+  journal={arXiv preprint arXiv:1204.0140},
+  year={2012}
+}
+
+@article{lecun1998gradient,
+  title={Gradient-based learning applied to document recognition},
+  author={LeCun, Yann and Bottou, L{\'e}on and Bengio, Yoshua and Haffner, Patrick},
+  journal={Proceedings of the IEEE},
+  volume={86},
+  number={11},
+  pages={2278--2324},
+  year={1998},
+  publisher={IEEE}
+}
+
+@article{bengio2009learning,
+  title={Learning deep architectures for AI},
+  author={Bengio, Yoshua},
+  journal={Foundations and trends{\textregistered} in Machine Learning},
+  volume={2},
+  number={1},
+  pages={1--127},
+  year={2009},
+  publisher={Now Publishers Inc.}
+}
+
+@inproceedings{miao2014improving,
+  title={Improving language-universal feature extraction with deep maxout and convolutional neural networks},
+  author={Miao, Yajie and Metze, Florian},
+  booktitle={Proc. Interspeech},
+  year={2014}
+}
+
+@inproceedings{plotz2011feature,
+  title={Feature learning for activity recognition in ubiquitous computing},
+  author={Pl{\"o}tz, Thomas and Hammerla, Nils Y and Olivier, Patrick},
+  booktitle={IJCAI Proceedings-International Joint Conference on Artificial Intelligence},
+  volume={22},
+  number={1},
+  pages={1729},
+  year={2011}
+}
+
+@inproceedings{kim2013deep,
+  title={Deep learning for robust feature generation in audiovisual emotion recognition},
+  author={Kim, Yelin and Lee, Honglak and Provost, Emily Mower},
+  booktitle={Acoustics, Speech and Signal Processing (ICASSP), 2013 IEEE International Conference on},
+  pages={3687--3691},
+  year={2013},
+  organization={IEEE}
+}
