--- a/Proposal/proposal_v4.tex
+++ b/Proposal/proposal_v4.tex
@@ -37,14 +37,14 @@ distinguishing features is available.
 In many real-world applications, however, the given set of features is not sufficient for inducing a high quality classifier.
 
 One approach for overcoming the difficulty resulting from an insufficiently expressive set of features, is to generate new features.  Most feature generation algorithms produce new features by combining the original ones in various ways.  For example, the LFC algorithm \citep{ragavan1993complex} combines the original feature using logical operators.  The LDMT algorithm \citep{utgo1991linear} uses linear combinations of the original features to construct more informative ones.  The FICUS algorithm \citep{markovitch2002feature} presents a general framework for using any set of constructors to combine features.
-%for final version-have at least one NEW paper here!(~3 years)
-%insert: the recently popular method of deep learning uses feature combination and transformations.
+
+Recently, there has been a strong trend of utilizing \emph{Deep Learning} \citep{lecun1998gradient, bengio2009learning} as a feature extraction method. These methods essentially allow combinations and transformations on pre-defined features in a semi-supervised manner, thus yielding new, more predictive features. 
+There are many good examples of this, such as the ones presented in \citet{plotz2011feature}, as well as \citet{kim2013deep}.
 
 While feature combination has proven to enhance the performance of induction algorithms, there are many cases where a mere combination of existing features is not enough.  To that extent, a new approach for generating features has been devised.  This approach aims to incorporate additional knowledge from external sources to construct new and informative features.
-\citet{gabrilovich2007computing} for example, present a method for generating features that are based on Wikipedia concepts.  \citet{jarmasz2004roget} present a method for utilizing lexical links between words to generate features.
-%again-at least one NEW citation
+\citet{gabrilovich2007computing} for example, present a method for generating features that are based on Wikipedia concepts. \citet{jarmasz2012roget} present a method for utilizing lexical links between words to generate features.
 
-In the case where this external knowledge is organized as a set of relations between entities, several methods can be used. One such method is using techniques from of \emph{Inductive Logic Programming} \citep{muggleton1991inductive} to generate features, in a process referred to as \emph{upgrading} \citep{}. The ICL algorithm \citep{van2001upgrade} searches a refinement graph for logical formulae which serve as features. The SGLR algorithm \citep{popescul200716} extends this idea to numerical features, inferred using regression-based model selection. %improve on this
+In the case where this external knowledge is organized as a set of relations between entities, several methods can be used. One such method is using techniques from of \emph{Inductive Logic Programming} \citep{muggleton1991inductive} to generate features, in a process referred to as \emph{upgrading} \citep{van2001upgrade}. This process is demonstrated through the ICL algorithm (same paper), an algorithm that uses a refinement graph to search for logical formulae which serve as features. The SGLR algorithm \citep{popescul200716} extends this idea to numerical features, generated using aggregation-based techniques, and then utilizes regression to allow inference.
 
 In this work, we present a new methodology for using relational knowledge for feature construction.  Our algorithm uses common induction algorithms over sets of feature values, resulting in classifiers which are then used as new features.
 Such classifier-based features can effectively capture complex relationships that are difficult to discover using existing feature-generation methods.
@@ -67,39 +67,37 @@ While our proposed method is general and can be used for any induction task, in 
 \section{Background} \label{background}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-%find an earlier version of muggleton
-One of the earliest methods of making use of relational information, suggested by \citet{muggleton1991inductive} and used in \citet{quinlan1990learning}, is \emph{Inductive Logic Programming(ILP)}. This approach induces a set of first-order formulae
+One of the earliest methods of making use of relational information, officially defined by \citet{muggleton1991inductive} and used in the well-known FOIL algorithm \citep{quinlan1990learning}, is \emph{Inductive Logic Programming(ILP)}. This approach induces a set of first-order formulae
 that define a good separation of the given training set. Originally, ILP methods searched the space of first-order formulae to find the appropriate classifier.
-Over time, effort has been made to allow the usage of traditional propositional algorithms such as ID3 \citep{quinlan1986} over this space.
+Over time, effort has been made to allow the usage of traditional propositional algorithms such as ID3 \citep{quinlan1986} over this domain.
 
 %need to re-write this so the whole refinement graph thing is clearer and not FoL predicate bull
-One major attempt at adding relational knowledge to induction methods was \emph{propositionalization} \citep{kramer2000bottom}: Since we wish to allow the use of first-order predicates in propositional methods, we create all possible(non recursive) first-order predicates and use them as features.
-A major setback of this process is that it generates an impractically large number of features, most of which irrelevant.  To this end, \emph{upgrade} methods such as ICL \citep{van2001upgrade} were suggested, where instead of a-priori creating all predicates, we search over predicates in a refinement process, guided by the labeled training data. %this needs a larger+better explanation of what refinement MEANS. keep it broad terms
+One major attempt at adding relational knowledge to induction methods was \emph{propositionalization} \citep{kramer2000bottom}: Since we wish to allow the use of first-order predicates in propositional methods, we create possible(non recursive) first-order predicates in a process known as refinement search.
+We define a graph of possible first-order formulae by selecting an initial relation and allowing two refinement operators: The first operator is assigning a constant value to one of the variables in the formula, and the second is binding a single variable using another relation.
 
-As a continuation to this trend, \citet{popescul200716} suggest SGLR, an upgrade method which allows the generation of non-binary attributes by using aggregation operators. Essentially, instead of simply checking whether a first-order predicate is satisfied, we perform aggregation over all objects which satisfy it. In addition, SGRL offers an initial insight into the issue of search by using Akaike's information criteria(AIC, see \citet{burnham2002model}) to select features based on complexity as well as predictive power.
+These operators define a search space. For every formula, we can ask whether a given object satisfies it, giving us a binary query for the data. We often prefer to only use formulae with one unbound variable, as it allows a much simpler satisfaction check.
+It is important to note that each refinement operator yields a formula that is subsumed by the parent, meaning that any object satisfying the child formula will also satisfy its parent.
 
-Newer advances in the relational approach can be seen in \emph{Statistical Relational Learning} \citep{blockeel2013statistical, nath2014learning} as well as \emph{Collective Classification} \citep{kajdanowicz2013collective, laorden2012collective}. The recent method of collective classification also uses relational information to improve the performance of the classifier. However, this relational information is not used for feature generation but for inferring labels of objects based on related objects. %add a similar paragraph on statistical relational learning
+A major setback of this process is that it generates an impractically large number of features, most of which irrelevant.  To this end, \emph{upgrade} methods such as ICL \citep{van2001upgrade} were suggested, where instead of a-priori creating all predicates, we search during training and use the labeled training data to avoid searching non-promising refinements. %this needs a larger+better explanation of what refinement MEANS. keep it broad terms
 
-%paragraph introducing Linked Data - fix these two (introduce, others use for linked data)
-As mentioned before, the rising popularity of Semantic Linked data such as YAGO2\citep{hoffart2013yago2} and Open Linked Data\citep{bizer2009linked} have led to the creation of new approaches to make use of this powerful, ontology based representation of knowledge\citep{losch2012graph,rios2014statistical}.
-We also intend to apply our method to this domain, as our method seems especially well suited to build make use of such ontology based knowledge bases by adding it into the learning process in an effective manner.
+As a continuation to this trend, \citet{popescul200716} suggest SGLR, an upgrade method which allows the generation of non-binary attributes by using aggregation operators. Essentially, instead of simply checking whether a first-order predicate is satisfied, we perform aggregation over all objects which satisfy it. In addition, SGRL offers an initial insight into the issue of better search by using Akaike's information criteria(AIC, see \citet{burnham2002model}) to select features based on complexity as well as predictive power.
 
-Recently, there have been several efforts in utilizing Linked Data for Feature Generation \citep{cheng2011automated, paulheim2012unsupervised}. While these techniques offer some insight towards applying the knowledge within such an extensive knowledge base as features, they often add them in an unsupervised manner, leading to the creation of an impractically large number of features, most of which are irrelevant, as seen in propositionalization methods. Due to this, they have difficulties with complex relationships and must limit search.
+Newer advances in the relational approach can be seen in the field of \emph{Statistical Relational Learning} \citep{blockeel2013statistical, nath2014learning} as well as the task of \emph{Collective Classification} \citep{kajdanowicz2013collective, laorden2012collective}. The general field of Statistical Relational Learning (and reasoning) deals in domains where there is a complex, relational structure, and is often used for Collective classification, link prediction and entity resolution between datasets. Of these, the most relevant to our domain is the task collective classification, where relational information is used to infer labels of objects based on related objects. However, this relational information is not used for feature generation, but as a way to link objects within the target domain.
+
+In recent years, a new resource in the form of Semantic Linked Data has begun to take form, as part of the Semantic Web project (see, for example, \citet{bizer2009linked}). This resource has led to the creation of several new approaches designed to utilize this new, ontology-based representation of knowledge\citep{losch2012graph,rios2014statistical}. 
+
+To this end, there have been several efforts in utilizing Linked Data for Feature Generation \citep{cheng2011automated, paulheim2012unsupervised}. While these techniques offer some insight towards applying the knowledge within such an extensive knowledge base as features, they often add them in an unsupervised manner, leading to the creation of an impractically large number of features, most of which are irrelevant, as seen in propositionalization methods. Due to this, they have difficulties handling complex relationships.
 
 
-A well-known and well-explored task within the field of Natural Language Processing(NLP) is that of text classification.
+An interesting domain can be found in a well-known and well-explored task within the field of Natural Language Processing(NLP): text classification.
 The task of text classification is that of assigning categories or labels to documents, based on their content. The potential labels/categories are given in advance, and we have a collection of labeled documents to use as a training set. This task has many practical applications, including spam filtering as well as identifying genre, sentiment, or topic.
 
-Until recent years, text classification systems represented text almost exclusively as a \emph{Bag of Words}, thus creating a vector space representation\citep{salton1983introduction,Wu:1981:CST:1013228.511759}. While this method offered simplicity, it had inherent limitations in terms of representation power.
+Until recent years, text classification systems represented text almost exclusively as a \emph{Bag of Words}, thus creating a vector space representation \citep{salton1983introduction,Wu:1981:CST:1013228.511759}. While this method offered simplicity, it had inherent limitations in terms of representation power.
 
-%unify both these things
-A major breakthrough came in the form of \citet{gabrilovich2006overcoming}, which used semantic concepts extracted from knowledge sources such as Wikipedia as features. This technique allowed for a richer representation of the text, and has shown improvement over the Bag-of-Words representation for the task of text classification, especially in shorter texts.
+A major breakthrough came in the form of the \emph{explicit sematic analysis} \citep{gabrilovich2006overcoming} method, which used semantic concepts extracted from knowledge sources such as Wikipedia as features. This technique allowed for a richer representation of the text, and has shown improvement over the Bag-of-Words representation for the task of text classification, especially in shorter texts.
 
-A good example of the potential power of adding additional knowledge to learning tasks can be found within the domain of text classification and categorization, where \citet{gabrilovich2007computing}
-introduced the \emph{explicit sematic analysis} method for generating concept-based features based on knowledge sources such as Wikipedia.
-This use of semantics allowed for a richer representation of the text than the existing Bag-of-Words model and thus achieving an increase in accuracy.
-
-%insert a final paragraph here to finish 
+%Final paragraph here to finish. 
+The goal of our work is to utilize Linked Data in order automatically generate features based on meaningful semantic concepts, thus improving existing machine learning algorithms. We intend to do so in a supervised manner to allow a better guided search over candidate features as well as feature selection based on a combination of complexity and predictive power.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Proposed Solution}
@@ -119,7 +117,8 @@ We would also like there to be connections between $F$ and ${\cal R}$, meaning s
 
 We propose a general feature generation algorithm using additional knowledge on feature values.
 Given an original feature $f_{i}$, with domain $Dom_i$, our algorithm will formulate a new learning task trying to separate values in $Dom_i$ appearing in positive examples of the original learning task from those appearing in negative ones.  The result of the new learning task will be a classifier
-$h_{i}:Dom_{i}\rightarrow \{0,1\}$ that can label feature values of $f_{i}$. We can then define a new binary feature $f'_{i}(x)=h_{i}(f_{i}(x))$.
+$h_{i}:Dom_{i}\rightarrow \{0,1\}$ that can label feature values of $f_{i}$. We can then define a new binary feature $f'_{i}(x)=h_{i}(f_{i}(x))$. 
+We name this algorithm \emph{Binary-RFG}, as it generates binary features (For pseudo-code, see appendix \ref{app:2}.
 
 In order to explain how we create such $h_{i}$, let us consider a single step of the feature generation algorithm.
 Given a feature $f_{i}$, we define the set of all its value in the training set $S$ as $v_i(S) = \{v | (o,y) \in S, f_{i}(o)=v\}$. In the intro example, for instance, $v_i(S)$ can be the set of all last names of patients.
@@ -140,11 +139,8 @@ If $\bar{S}$ is a domain, then for any transform $G_{\bar{F},\bar{R}}$, $\bar{S'
 \end{defn}
 Given sufficient resources, we could potentially search this tree exhaustively during the learning process. In most practical cases, however, an exhaustive search proves intractable, and we must select a search strategy over this tree.
 
-%This paragraph is pointless. should be moved/changed/other things because its the same alg as above!!!
-%mby later add multiclass-RFG as well
-Now, we will discuss \emph{Binary-RFG} (See full algorithm in appendix \ref{app:2}):
-The basic version opts for transformations of the following form: given $\hat{S},\hat{F},\hat{R}$ and a feature $f_{j}\in \hat{F}$, $G_{i}(o)=R_{i}(f_{j}(o))$ ($R_{i}\in \hat{R},Dom_{j}\cap K_{i}\neq \emptyset$).
-The result is a process that bears some similarity to that of search over a refinement graph\citep{dvzeroski2001introduction,van1998completeness}, a common technique in ILP.
+Note that \emph{Binary-RFG} essentially uses transformations of the following form: given $\bar{S},\bar{F},\bar{R}$ and a feature $f_{j}\in \bar{F}$, $G_{i}(o)=R_{i}(f_{j}(o))$ ($R_{i}\in \bar{R},Dom_{j}\cap K_{i}\neq \emptyset$).
+The result is a process that bears some similarity to that of search over a refinement graph \citep{dvzeroski2001introduction,van1998completeness}.
 
 The unique contributions of this method are as follows:
 \begin{itemize}
@@ -161,7 +157,6 @@ Finally, we note that the local variation yields an algorithm that can easily be
 %Note that in order to classify using traditional methods, we must transform feature values appropriately, for example, we can derive binary feature values by using $q_{g_{j},c}(x)=\{\begin{array}{l l}
 %            1 & \quad c\in g_{j}(x)\\
 %            0 & \quad \text{otherwise} \end{array}$
-
 %If relation is not a function->can be made function by set
 
 \section{Research Questions}
@@ -236,7 +231,7 @@ In addition, we intend on measuring the anytime performance of its anytime varia
 %\end{algorithmic}
 %\end{algorithm}
 
-\section{Basic-RFG algorithm} \label{app:2}
+\section{Binary-RFG algorithm} \label{app:2}
 \begin{algorithm}[H]
 $S=\{(o_{i},y_{i})\}$- set of labeled objects. We will mark $Ob$ the objects and $y$ the appropriate labels.
 
@@ -250,7 +245,7 @@ $cond$- Stopping criteria.
 
 classifiers- An array of the classifier to be used at every level of the recursive process.
 
-\caption{Basic-RFG}
+\caption{Binary-RFG}
 \label{code2}
 \begin{algorithmic}
 \Function{B-RFG}{S, F, R, n, classifiers, cond}
@@ -271,7 +266,7 @@ classifiers- An array of the classifier to be used at every level of the recursi
 \end{algorithmic}
 \end{algorithm}
 
-\section{Anytime Local-Hierarchy-RFG Algorithm} \label{app:3}
+\section{Anytime Local-Hierarchy-Binary-RFG Algorithm} \label{app:3}
 \begin{algorithm}[H]
 \caption{Anytime Tree-RFG}
 \label{code3}
