Paper stuff+better tree output

--- a/Proposal/document.bib
+++ b/Proposal/document.bib
@@ -505,3 +505,49 @@ pages = {331-339}
   year={2013},
   organization={IEEE}
 }
+
+@inproceedings{davis2005view,
+	title={View Learning for Statistical Relational Learning: With an Application to Mammography.},
+	author={Davis, Jesse and Burnside, Elizabeth S and de Castro Dutra, In{\^e}s and Page, David and Ramakrishnan, Raghu and Costa, Vitor Santos and Shavlik, Jude W},
+	booktitle={IJCAI},
+	pages={677--683},
+	year={2005},
+	organization={Citeseer}
+}
+
+@inproceedings{gabrilovich2004text,
+	title={Text categorization with many redundant features: Using aggressive feature selection to make SVMs competitive with C4. 5},
+	author={Gabrilovich, Evgeniy and Markovitch, Shaul},
+	booktitle={Proceedings of the twenty-first international conference on Machine learning},
+	pages={41},
+	year={2004},
+	organization={ACM}
+}
+
+@article{steinberg2009cart,
+	title={CART: classification and regression trees},
+	author={Steinberg, Dan and Colla, Phillip},
+	journal={The top ten algorithms in data mining},
+	volume={9},
+	pages={179},
+	year={2009},
+	publisher={CRC Press}
+}
+
+@techreport{fix1951discriminatory,
+	title={Discriminatory analysis-nonparametric discrimination: consistency properties},
+	author={Fix, Evelyn and Hodges Jr, Joseph L},
+	year={1951},
+	institution={DTIC Document}
+}
+
+@article{cortes1995support,
+	title={Support-vector networks},
+	author={Cortes, Corinna and Vapnik, Vladimir},
+	journal={Machine learning},
+	volume={20},
+	number={3},
+	pages={273--297},
+	year={1995},
+	publisher={Springer}
+}
